Fix for long nicks wrap when using default Limelight theme.

--- a/Resources/Themes/Limelight.css
+++ b/Resources/Themes/Limelight.css
@@ -118,7 +118,7 @@ body.normal .sender[type=normal], body.normal .sender[type=myself] {
 	float: left;
 	padding-right: 0.3ex;
 	text-align: right;
-	width: 20ex;
+	width: auto;
 }
 
 body.normal div.line[type=action] .sender[type=normal], div.line[type=action] .sender[type=myself] {
